--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -11,4 +11,10 @@
  neutrality:0 "Non-Aligned"
  neutrality_noun:0 "Non-Aligned"
  neutrality_desc:0 "Non-Aligned"
- country_government:0 "[Root.GetName] Government"
+ government_name:0 "Government"
+ head_of_state_title:0 "Head of State"
+ head_of_government_title:0 "Head of Government"
+ foreign_minister_title:0 "Foreign Minister"
+ head_of_intelligence_title:0 "Head of Intelligence"
+ security_minister_title:0 "Security Minister"
+ armament_minister_title:0 "Armament Minister"
