--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -20,3 +20,14 @@
  armament_minister_title:0 "Armament Minister"
  SELECT_MINISTER:0 "Select Minister"
  FIREMINISTER:0 "Fire Minister"
+ ASSIGNMINISTER:0 "Assign Minister"
+ MINISTER_NAME:0 "§YName:§! [Getministername]"
+ minister_1:0 "Astolfo"
+ MINISTER_IDEOLOGY:0 "§YIdeology:§! [Getministerideology]"
+ minister_1_ideology:0 "Fascist"
+ MINISTER_TRAITS:0 "§YTraits:§! [Getministertraits]"
+ minister_1_trait:0 "Femboy"
+ MINISTER_HINT:0 "§YName:§! [Getministername]\n§YIdeology:§! [Getministerideology] \n§YTraits:§! [Getministertraits]"
+ minister_2:0 "Dextrose"
+ minister_2_ideology:0 "Coommunist"
+ minister_2_trait:0 "Depressed"
