--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -11,7 +11,7 @@
  neutrality:0 "Non-Aligned"
  neutrality_noun:0 "Non-Aligned"
  neutrality_desc:0 "Non-Aligned"
- government_name:0 "Government"
+ government_name:0 "[?this.GetAdjective] Government"
  head_of_state_title:0 "Head of State"
  head_of_government_title:0 "Head of Government"
  foreign_minister_title:0 "Foreign Minister"
@@ -31,3 +31,12 @@
  minister_2:0 "Dextrose"
  minister_2_ideology:0 "Coommunist"
  minister_2_trait:0 "Depressed"
+ minister_3:0 "Blue"
+ minister_3_ideology:0 "Brazilian Fascist"
+ minister_3_trait:0 "Chad"
+ minister_4:0 "Loli"
+ minister_4_ideology:0 "National-Socialism"
+ minister_4_trait:0 "Pedophile"
+ minister_5:0 "Walter"
+ minister_5_ideology:0 "Walter"
+ minister_5_trait:0 "Walter"
